writing first draft

--- a/sections/_methods.qmd
+++ b/sections/_methods.qmd
@@ -1,5 +1,9 @@
 # Methods
 
+::: {.SRQR data="purpose-of-research-question"}
+The purpose of this study was to elicit ideas to address barriers that may otherwise limit RG impact from experts familiar with RG dissemination.
+:::
+
 ## Qualitative approach and research paradigm
 
 Our qualitative approach was active research, whereby participants and researchers generated ideas linked to theoretical concepts from the Behaviour Change Wheel (#REF). Our paradigm was post-positivist; we considered that ideas were "out there" and recognised that the opinions of the lead researchers may influence what they observe and conclude, and attempted to mitigate against this (see [_Techniques to Enhance Trustworthiness_](#sec-trust)).
@@ -45,13 +49,7 @@ We chose focus groups to collect data so that participants with differing backgr
 
 ### Pre-focus group activities: developing the first version of the co-produced document
 
-Our starting point was a list of barriers and facilitators that came from previous research; a thematic synthesis, review of quantitative surveys, observation of user behaviour on the EQUATOR Network, and personal experience of EQUATOR team members. The difference between barrier and facilitator isn't always clear cut: sometimes a facilitator to one person could be a barrier for another, and othertimes the absence of a facilitator can be described as a barrier. From here-on, we use the word "barriers" to refer to barriers _and_ the absence of facilitators.
-
-Given that there were many barriers to discuss and many potential solutions, we felt it was not feasible to ask participants to start from a blank sheet. Therefore, JH facilitated a series of meetings with members of the EQUATOR Network to create an initial set of potential solutions. He used worksheets 1-#TODO of the Behaviour Change Wheel.These worksheets help intervention designers to define the behaviour they wish to target, barriers preventing that behaviour, and the behavioural drivers underlying those barriers. Worksheet #TODO asks you to consider #TODO: Count IFs types of intervention functions (which encompass all possible types of intervention) and how they could be used to target the barrier. Worksheet #TODO asks you to consider #TODO different policy categories (which represent all possible options for how intervention functions can be delivered) and which stakeholders could enact them.
-
-The EQUATOR team met #TODO times between #TODO and #TODO, with each meeting lasting #TODO hours. Throughout these meetings, JH would ask EQUATOR members to consider the worksheets on their own or in pairs, before discussing as a group. He would withold his own ideas until the end, whereupon other EQUATOR members could discuss them and add them to the document if desired. Most of these ideas came from the thematic synthesis or his software development experience. We felt this was justified as raising ideas from the lead researcher at this early stage meant that all EQUATOR members and future focus group members would have the opportunity to modify or disagree with them.
-
-The result was a single "ideas document" with two columns: barriers were described in the left hand column, and potential solutions in the right hand column. It can be seen at #TODO OSF file. Focus group participants could edit or add to this initial list. This gave participants plenty of food for thought and made it easier to achieve our aim of identifying as many ideas as possible.
+I previously described how EQUATOR and I modified worksheet 5 from the Behaviour Change Wheel to generate a list of ideas that could target behavioural barriers. This "ideas document" had two columns: barriers were described in the left hand column, and potential solutions in the right hand column. It can be seen at #TODO appendix file. This gave participants plenty of food for thought which they could edit or extend, and made it easier to achieve our aim of identifying as many ideas as possible. However, because it these ideas could bias or limit the creativity of participants I initially hid them by turning the text in the ideas column white, making it invisible before sharing. I would reveal the text only after participants had exhausted their own imagination.
 
 ### Before each focus group
 
@@ -67,9 +65,9 @@ In the first focus group it became apparent that participants had a lot to say a
 
 ### Brainstorming solutions to chosen barriers
 
-JH would explain the barrier in question and allow participants to ask questions. Once participants felt they understood it, JH asked them to spend a couple of minutes brainstorming solutions in silence. Participants then  discussed their ideas as a group. In order not to bias participants, JH hid exisint ideas within the ideas document by turning the text in the ideas column white, making it invisible before sharing. Once participants had discussed their own ideas, JH would reveal the ideas identified by previous groups by changing the colour of the text back to black. Participants then edited or extended the text until it reflected their thoughts. Ideas were never removed from the document, but participants could add concerns or disagreements if they wanted to.
+JH would explain the barrier in question and allow participants to ask questions. Once participants felt they understood it, JH asked them to spend a couple of minutes brainstorming solutions in silence. Participants then  discussed their ideas as a group. Once participants had discussed their own ideas, JH would reveal the ideas identified by previous groups by changing the colour of the text from white to black. Participants then edited or extended the text until it reflected their thoughts. Ideas were never removed from the document, but participants could add concerns or disagreements if they wanted to.
 
-Sometimes participants would get fixed on a particular solution and find it difficult to think of others. If this happened, JH would reassure participants that their fixated solution was documented and that it would be useful to think of alternatives. He would use intervention functions from the Behaviour Change Wheel to prompt discussion, saying something like "Could we change how people feel about this [barrier]?" or "What would make [behaviour] easier to do?".
+This was different to how I worked through the exercise with EQUATOR. The EQUATOR team had had many sessions to become familiar with BCW terms and concepts. Some even read the BCW book themselves. We took each intervention function in turn and tried to apply it to each barrier. But in practice EQUATOR staff frequently got confused and would, for instance, suggest an idea employing _persuasion_ when discussing _education_. I felt it impractical, therefore, to expect focus group participants to understand and begin using BCW concepts within a matter of minutes. Instead, I used the BCW to prompt discussion. This became especially useful on occasions when participants would get fixed on a particular solution and find it difficult to think of others. If this happened, JH would reassure participants that their fixated solution was documented and that it would be useful to think of alternatives. He would use intervention functions from the Behaviour Change Wheel to prompt discussion, saying something like "Could we change how people feel about this [barrier]?" or "What would make [behaviour] easier to do?".
 
 ### Between focus groups
 
@@ -81,7 +79,7 @@ After the final focus group, JH imported the final ideas document into NVivo and
 
 ### Data analysis
 
-Our analysis involved aggregating and summarising ideas. We did not seek to interpret data as doing so would erase the views captured during co-production. JH grouped ideas inductively in ways that felt cohesive and made the results easy for our intended audience (the reporting guideline community) to understand and act upon. For example, the ideas "ask authors to cite reporting guidelines" and "display citation metrics on reporting guideline resources" were placed together into an aggregated ideas about "Citations", even though they target different barriers (discoverability and trustworthiness) and employ different intervention functions (education and persuasion). # TODO: ensure wording matches results.
+We used qulitative description for our analysis (@bradshawEmployingQualitativeDescription2017; @kimCharacteristicsQualitativeDescriptive2017), which involved aggregating and summarising ideas. We did not seek to interpret data as doing so would erase the views captured during co-production. JH grouped ideas inductively in ways that felt cohesive and made the results easy for our intended audience (the reporting guideline community) to understand and act upon. For example, the ideas "ask authors to cite reporting guidelines" and "display citation metrics on reporting guideline resources" were placed together into an aggregated ideas about "Citations", even though they target different barriers (discoverability and trustworthiness) and employ different intervention functions (education and persuasion). # TODO: ensure wording matches results.
 
 JH then discussed and refined all coding, aggregating and summarising with JdB. Sometimes participants would mention an idea without specifying which stakeholder(s) it could apply to, and so JH and JdB added relationships between stakeholders and ideas retrospectively when necessary.
 
