--- a/article.qmd
+++ b/article.qmd
@@ -1,7 +1,7 @@
 ---
 title: |
     Identifying possible improvements to reporting guideline dissemination: focus groups with guideline experts
-
+bibliography: references.bib
 format: 
     docx:
         from: markdown+grid_tables
@@ -20,5 +20,10 @@ format:
 {{< include sections/_results.qmd >}}
 
 {{< include sections/_discussion.qmd >}}
+
+### References
+
+::: {#refs}
+:::
 
 {{< include sections/_appendix.qmd >}}
