updated redesign chapter

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,21 @@
+@article{bandInterventionPlanningDigital2017a,
+  title = {Intervention Planning for a Digital Intervention for Self-Management of Hypertension: A Theory-, Evidence- and Person-Based Approach},
+  shorttitle = {Intervention Planning for a Digital Intervention for Self-Management of Hypertension},
+  author = {Band, Rebecca and Bradbury, Katherine and Morton, Katherine and May, Carl and Michie, Susan and Mair, Frances S. and Murray, Elizabeth and McManus, Richard J. and Little, Paul and Yardley, Lucy},
+  year = {2017},
+  month = feb,
+  journal = {Implementation Science},
+  volume = {12},
+  number = {1},
+  pages = {25},
+  issn = {1748-5908},
+  doi = {10.1186/s13012-017-0553-4},
+  urldate = {2023-04-25},
+  abstract = {This paper describes the intervention planning process for the Home and Online Management and Evaluation of Blood Pressure (HOME BP), a digital intervention to promote hypertension self-management. It illustrates how a Person-Based Approach can be integrated with theory- and evidence-based approaches. The Person-Based Approach to intervention development emphasises the use of qualitative research to ensure that the intervention is acceptable, persuasive, engaging and easy to implement.},
+  keywords = {Blood pressure,Hypertension,Intervention planning,Methodological study,Self-management,Self-monitoring,Theoretical modelling},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Band et al_2017_Intervention planning for a digital intervention for self-management of2.pdf}
+}
+
 @article{bradshawEmployingQualitativeDescription2017,
   title = {Employing a {{Qualitative Description Approach}} in {{Health Care Research}}},
   author = {Bradshaw, Carmel and Atkinson, Sandra and Doody, Owen},
@@ -9,9 +27,10 @@
   publisher = {{SAGE Publications Inc}},
   issn = {2333-3936},
   doi = {10.1177/2333393617742282},
+  urldate = {2022-12-27},
   abstract = {A qualitative description design is particularly relevant where information is required directly from those experiencing the phenomenon under investigation and where time and resources are limited. Nurses and midwives often have clinical questions suitable to a qualitative approach but little time to develop an exhaustive comprehension of qualitative methodological approaches. Qualitative description research is sometimes considered a less sophisticated approach for epistemological reasons. Another challenge when considering qualitative description design is differentiating qualitative description from other qualitative approaches. This article provides a systematic and robust journey through the philosophical, ontological, and epistemological perspectives, which evidences the purpose of qualitative description research. Methods and rigor issues underpinning qualitative description research are also appraised to provide the researcher with a systematic approach to conduct research utilizing this approach. The key attributes and value of qualitative description research in the health care professions will be highlighted with the aim of extending its usage.},
   langid = {english},
-  keywords = {_tablet},
+  keywords = {\_tablet},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Bradshaw et al_2017_Employing a Qualitative Description Approach in Health Care Research.pdf}
 }
 
@@ -26,6 +45,7 @@
   pages = {37},
   issn = {1748-5908},
   doi = {10.1186/1748-5908-7-37},
+  urldate = {2023-01-09},
   abstract = {An integrative theoretical framework, developed for cross-disciplinary implementation and other behaviour change research, has been applied across a wide range of clinical situations. This study tests the validity of this framework.},
   keywords = {Behaviour,Change,Implementation,Theoretical domains framework,Theory,Validation},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Cane et al_2012_Validation of the theoretical domains framework for use in behaviour change and.pdf}
@@ -35,6 +55,7 @@
   title = {A {{Guide}} to {{Using User-Experience Research Methods}}},
   author = {Experience, World Leaders in Research-Based User},
   journal = {Nielsen Norman Group},
+  urldate = {2022-09-30},
   abstract = {Modern day UX research methods answer a wide range of questions. To help you know when to use which user research method, each of 20 methods is mapped across 3 dimensions and over time within a typical product-development process.},
   howpublished = {https://www.nngroup.com/articles/guide-ux-research-methods/},
   langid = {english}
@@ -42,6 +63,7 @@
 
 @misc{Guideline,
   title = {Guideline},
+  urldate = {2023-01-10},
   abstract = {1. information intended to advise people on how something should be done or\ldots},
   howpublished = {https://dictionary.cambridge.org/dictionary/english/guideline},
   langid = {english}
@@ -59,10 +81,11 @@
   pages = {23--42},
   issn = {0160-6891},
   doi = {10.1002/nur.21768},
+  urldate = {2022-12-27},
   abstract = {Qualitative description (QD) is a term that is widely used to describe qualitative studies of health care and nursing-related phenomena. However, limited discussions regarding QD are found in the existing literature. In this systematic review, we identified characteristics of methods and findings reported in research articles published in 2014 whose authors identified the work as QD. After searching and screening, data were extracted from the sample of 55 QD articles and examined to characterize research objectives, design justification, theoretical/philosophical frameworks, sampling and sample size, data collection and sources, data analysis, and presentation of findings. In this review, three primary findings were identified. First, despite inconsistencies, most articles included characteristics consistent with limited, available QD definitions and descriptions. Next, flexibility or variability of methods was common and desirable for obtaining rich data and achieving understanding of a phenomenon. Finally, justification for how a QD approach was chosen and why it would be an appropriate fit for a particular study was limited in the sample and, therefore, in need of increased attention. Based on these findings, recommendations include encouragement to researchers to provide as many details as possible regarding the methods of their QD study so that readers can determine whether the methods used were reasonable and effective in producing useful findings.},
   pmcid = {PMC5225027},
   pmid = {27686751},
-  keywords = {_tablet},
+  keywords = {\_tablet},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Kim et al_2017_Characteristics of Qualitative Descriptive Studies.pdf}
 }
 
@@ -78,6 +101,7 @@
   pages = {42},
   issn = {1748-5908},
   doi = {10.1186/1748-5908-6-42},
+  urldate = {2021-10-14},
   abstract = {Improving the design and implementation of evidence-based practice depends on successful behaviour change interventions. This requires an appropriate method for characterising interventions and linking them to an analysis of the targeted behaviour. There exists a plethora of frameworks of behaviour change interventions, but it is not clear how well they serve this purpose. This paper evaluates these frameworks, and develops and evaluates a new framework aimed at overcoming their limitations.},
   keywords = {Behaviour Change,Behaviour Change Intervention,Behaviour Change Technique,Intervention Function,Target Behaviour},
   file = {/Users/james/Zotero/storage/6I9TL5NX/Michie et al_2011_The behaviour change wheel.pdf;/Users/james/Zotero/storage/3BSPFRJJ/1748-5908-6-42.html}
@@ -104,6 +128,7 @@
   publisher = {{BMJ Publishing Group Ltd}},
   issn = {2044-5415, 2044-5423},
   doi = {10.1136/qshc.2004.011155},
+  urldate = {2023-01-09},
   abstract = {Background: Evidence-based guidelines are often not implemented effectively with the result that best health outcomes are not achieved. This may be due to a lack of theoretical understanding of the processes involved in changing the behaviour of healthcare professionals. This paper reports the development of a consensus on a theoretical framework that could be used in implementation research. The objectives were to identify an agreed set of key theoretical constructs for use in (1) studying the implementation of evidence based practice and (2) developing strategies for effective implementation, and to communicate these constructs to an interdisciplinary audience. Methods: Six phases of work were conducted to develop a consensus: (1) identifying theoretical constructs; (2) simplifying into construct domains; (3) evaluating the importance of the construct domains; (4) interdisciplinary evaluation; (5) validating the domain list; and (6) piloting interview questions. The contributors were a ``psychological theory'' group (n = 18), a ``health services research'' group (n = 13), and a ``health psychology'' group (n = 30). Results: Twelve domains were identified to explain behaviour change: (1) knowledge, (2) skills, (3) social/professional role and identity, (4) beliefs about capabilities, (5) beliefs about consequences, (6) motivation and goals, (7) memory, attention and decision processes, (8) environmental context and resources, (9) social influences, (10) emotion regulation, (11) behavioural regulation, and (12) nature of the behaviour. Conclusions: A set of behaviour change domains agreed by a consensus of experts is available for use in implementation research. Applications of this domain list will enhance understanding of the behaviour change processes inherent in implementation of evidence-based practice and will also test the validity of these proposed domains.},
   chapter = {Original Article},
   copyright = {Copyright 2005 Quality and Safety in Health Care},
@@ -123,16 +148,18 @@
   pages = {51--59},
   issn = {2245-5744},
   doi = {10.7146/claw.v1i2.7892},
+  urldate = {2020-11-10},
   abstract = {Many guidelines and several standards exist for the development of good user manuals. But even though technical writers comply with all guidelines, problems will typically arise when users apply the manual in practice. Therefore, it is useful to have real users test the manual before it is published. This article discusses user tests in the form of think-aloud tests, with examples from the research project ''User Manuals for older adults''.},
   copyright = {Copyright (c) 2015 Communication \& Language at Work},
   langid = {english},
-  keywords = {_tablet,protocol,testing,usability,user manuals},
+  keywords = {\_tablet,protocol,testing,usability,user manuals},
   file = {/Users/james/Zotero/storage/SB84NEV4/Møller_2013_Usability Testing of User Manuals.pdf;/Users/james/Zotero/storage/8CTJ9RSI/7892.html}
 }
 
 @misc{NICEClinicalGuidelines,
   title = {{{NICE}} Clinical Guidelines | {{Tools}} and Resources | {{The}} Guidelines Manual | {{Guidance}} | {{NICE}}},
   publisher = {{NICE}},
+  urldate = {2023-01-10},
   abstract = {The guidelines manual},
   howpublished = {https://www.nice.org.uk/process/pmg6/resources/how-nice-clinical-guidelines-are-developed-an-overview-for-stakeholders-the-public-and-the-nhs-2549708893/chapter/nice-clinical-guidelines},
   langid = {english}
