bibliography style and citations

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,28 @@
+@misc{APAPsycNetFullTextHTML,
+  title = {{{APA PsycNet FullTextHTML}} Page},
+  urldate = {2023-06-28},
+  howpublished = {https://psycnet.apa.org/fulltext/2018-00750-002.html},
+  file = {/Users/james/Zotero/storage/MVVNVB8Z/2018-00750-002.html}
+}
+
+@article{appelbaumJournalArticleReporting2018,
+  title = {Journal Article Reporting Standards for Quantitative Research in Psychology: {{The APA Publications}} and {{Communications Board}} Task Force Report.},
+  shorttitle = {Journal Article Reporting Standards for Quantitative Research in Psychology},
+  author = {Appelbaum, Mark and Cooper, Harris and Kline, Rex B. and {Mayo-Wilson}, Evan and Nezu, Arthur M. and Rao, Stephen M.},
+  year = {2018},
+  month = jan,
+  journal = {American Psychologist},
+  volume = {73},
+  number = {1},
+  pages = {3--25},
+  issn = {1935-990X, 0003-066X},
+  doi = {10.1037/amp0000191},
+  urldate = {2023-06-28},
+  abstract = {Following a review of extant reporting standards for scientific publication, and reviewing 10 years of experience since publication of the first set of reporting standards by the American Psychological Association (APA; APA Publications and Communications Board Working Group on Journal Article Reporting Standards, 2008), the APA Working Group on Quantitative Research Reporting Standards recommended some modifications to the original standards. Examples of modifications include division of hypotheses, analyses, and conclusions into 3 groupings (primary, secondary, and exploratory) and some changes to the section on meta-analysis. Several new modules are included that report standards for observational studies, clinical trials, longitudinal studies, replication studies, and N-of-1 studies. In addition, standards for analytic methods with unique characteristics and output (structural equation modeling and Bayesian analysis) are included. These proposals were accepted by the Publications and Communications Board of APA and supersede the standards included in the 6th edition of the Publication Manual of the American Psychological Association (APA, 2010).},
+  langid = {english},
+  file = {/Users/james/Zotero/storage/N6Z3I76M/Appelbaum et al. - 2018 - Journal article reporting standards for quantitati.pdf}
+}
+
 @article{bandInterventionPlanningDigital2017a,
   title = {Intervention Planning for a Digital Intervention for Self-Management of Hypertension: A Theory-, Evidence- and Person-Based Approach},
   shorttitle = {Intervention Planning for a Digital Intervention for Self-Management of Hypertension},
@@ -87,6 +112,31 @@
   pmid = {27686751},
   keywords = {\_tablet},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Kim et al_2017_Characteristics of Qualitative Descriptive Studies.pdf}
+}
+
+@book{l.morganFocusGroupsQualitative1997,
+  title = {Focus {{Groups}} as {{Qualitative Research}}},
+  author = {L.Morgan, David},
+  year = {1997},
+  publisher = {{SAGE Publications, Inc.}},
+  doi = {10.4135/9781412984287},
+  urldate = {2023-06-27},
+  abstract = {{$<$}p{$>$}The extensively revised edition of the best-selling Focus Groups as Qualitative Research continues to provide an excellent guide for researchers across the d},
+  isbn = {978-1-4129-8428-7},
+  langid = {english}
+}
+
+@book{lincolnNaturalisticInquiry1985,
+  title = {Naturalistic {{Inquiry}}},
+  author = {Lincoln, Yvonna S. and Guba, Egon G.},
+  year = {1985},
+  month = apr,
+  publisher = {{SAGE}},
+  abstract = {"Showing how science is limited by its dominant mode of investigation, Lincoln and Guba propose an alternative paradigm--a "naturalistic" rather than "rationalistic" method of inquiry--in which the investigator avoids manipulating research outcomes. A "paradigm shift" is under way in many fields, they contend, and go on to describe the different assumptions of the two approaches regarding the nature of reality, subject-object interaction, the possibility of generalization, the concept of causality, and the role of values. The authors also offer guidance for research in the field (where, they say, naturalistic inquiry always takes place). Useful tips are given, for example, on "designing" a study as it unfolds, establishing "trustworthiness," and writing a case report. This book helps researchers "both to understand and to do naturalistic inquiry." Of particular interest to educational researchers, it is valuable for all social scientists involved with questions of qualitative and quantitative methodology."--Publisher's description.},
+  googlebooks = {2oA9aWlNeooC},
+  isbn = {978-0-8039-2431-4},
+  langid = {english},
+  keywords = {Social Science / Research}
 }
 
 @article{michieBehaviourChangeWheel2011,
