--- a/references.bib
+++ b/references.bib
@@ -139,6 +139,19 @@
   keywords = {Social Science / Research}
 }
 
+@book{m.givenSAGEEncyclopediaQualitative2008,
+  title = {The {{SAGE Encyclopedia}} of {{Qualitative Research Methods}}},
+  author = {M.Given, Lisa},
+  year = {2008},
+  publisher = {{SAGE Publications, Inc.}},
+  doi = {10.4135/9781412963909},
+  urldate = {2023-07-03},
+  abstract = {{$<$}p{$>$}Qualitative research is designed to explore the human elements of a given topic, while specific qualitative methods examine how individuals see and experienc},
+  isbn = {978-1-4129-6390-9},
+  langid = {english},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/M.Given_2008_The SAGE Encyclopedia of Qualitative Research Methods.pdf}
+}
+
 @article{michieBehaviourChangeWheel2011,
   title = {The Behaviour Change Wheel: {{A}} New Method for Characterising and Designing Behaviour Change Interventions},
   shorttitle = {The Behaviour Change Wheel},
